--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -156,6 +156,26 @@ table#report_list .report_action {
     width: 13%;
 }
 
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
