--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -160,7 +160,9 @@ pre {
     font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
 
-
+h3 {
+    font-size: larger;
+}
 
 
 
